[tool.poetry]
name = "parseltongue"
version = "0.1.0"
description = "Parseltongue compiler"
authors = ["Erik Demaine <edemaine@mit.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
#pegen = "0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
